# bob_perception

./: CMakeLists.txt  README.md  package.xml
data/: rrc1_outliers.pcd
launch/: depth_viewer.launch  laser.launch  paint_line.launch  pc2image.launch  pointcloud.launch  position.launch
script/: motor.py  position.py
src/: depth_viewer.cpp  laserscan_to_pointcloud.cpp  outlier_removal.cpp  paint_line.cpp  pcl_pass.cpp  pointcloud2image.cpp  pointcloud_sub.cpp  ros_pc2.cpp
